kube_apps/nextcloud/deploy-nextcloud.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nextcloud
  namespace: nextcloud
  labels:
    app: nextcloud
spec:
  replicas: 1
  revisionHistoryLimit: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
  selector:
    matchLabels:
      app: nextcloud
  template:
    metadata:
      labels:
        app: nextcloud
      annotations:
        diun.enable: "true"
        diun.watch_repo: "true"
        diun.include_tags: "latest;24.*-php8;25.*-php8"
    spec:
      affinity:
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            - labelSelector:
                matchExpressions:
                - key: app
                  operator: In
                  values:
                  - nextcloud
              topologyKey: "kubernetes.io/hostname"
      containers:
        - name: nextcloud
          image: linuxserver/nextcloud:24.0.6-php8
          imagePullPolicy: "IfNotPresent"
          resources:
            limits:
              memory: 1024Mi
              cpu: "0.50"
            requests:
              memory: 256Mi
              cpu: "0.50"
          ports:
            - containerPort: 443
              protocol: TCP
              name: https
          volumeMounts:
            - mountPath: /config
              name: nextcloud-data
              subPath: nextcloud-config
            - mountPath: /data
              name: nextcloud-data
              subPath: nextcloud-data
      restartPolicy: Always
      volumes:
        - name: nextcloud-data
          persistentVolumeClaim:
            claimName: pvc-nextcloud
