kube_apps/nextcloud/svc-nextcloud-cluster.yaml
kind: Service
apiVersion: v1
metadata:
  name: svc-nextcloud-cluster
  namespace: nextcloud
  labels:
    app: nextcloud
spec:
  selector:
    app: nextcloud
  ports:
    - name: https
      protocol: TCP
      port: 443
      targetPort: 443
  type: ClusterIP
