kube_apps/nextcloud/svc-nextcloud.yaml
kind: Service
apiVersion: v1
metadata:
  name: svc-nextcloud
  namespace: nextcloud
  labels:
    app: nextcloud
spec:
  selector:
    app: nextcloud
  ports:
    - name: https
      protocol: TCP
      port: 443
      targetPort: 443
  type: NodePort
