kube_apps/nextcloud/svc-redis.yaml
kind: Service
apiVersion: v1
metadata:
  name: svc-redis
  namespace: nextcloud
  labels:
    app: redisapp
spec:
  selector:
    app: redisapp
  ports:
    - name: http-redis
      protocol: TCP
      port: 6379
      targetPort: 6379
  type: NodePort
