kube_apps/nextcloud/ingresscdr-nextcloud.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: nextcloud-ingresscdr
  namespace: nextcloud

spec:
  entryPoints:
    - websecure

  routes:
  - kind: Rule
    match: Host(`cloud.houseofus.eu`)
    services:
    - kind: Service
      name: svc-nextcloud-cluster
      port: 443
      namespace: nextcloud
      scheme: https
      serversTransport: nextcloud-transport
      sticky:
        cookie:
          name: nc_session_id
  tls:
    certResolver: file
    options:
      name: nextcloud-tls
      namespace: nextcloud
